# midenid-contracts

./: .env.example  .gitignore  ADDRESSES.md  AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  README.md  SCRIPTS.md  TEST_HELPER_REFERENCE.md  store.sqlite  store.sqlite3  todo.md
keystore/: 6584435807545223736  7318970790280527325  7451777476707940668
masm/accounts/: identity.masm  miden_id.masm  miden_id_registry.masm  naming.masm  naming_old.masm  namingv2.masm  pricing.masm
masm/auth/: no_auth.masm
masm/notes/: P2N.masm  activate_domain.masm  claim_protocol_revenue.masm  clear_expired_domain.masm  extend_domain.masm  init.masm  init_miden_id.masm  init_registry_note.masm  initialize.masm  register.masm  (+17 more)
old_tests/: increment_count_test.rs  init_registry_test.rs  owner_test.rs  price_update_test.rs  register_test.rs  test_helper.rs
oldmasm/: miden_id_registry_old.masm
scripts/: deploy.sh  setup_node.sh  start_node_and_test.sh
src/: accounts.rs  client.rs  common.rs  config.rs  deploy.rs  domain.rs  lib.rs  main.rs  notes.rs  scripts.rs  storage.rs  transaction.rs  utils.rs
tests/: ascii_test.rs  character_map.rs  complete_payment_test.rs  deployment_test.rs  encoding_test.rs  export_functions_test.rs  init_registry_test.rs  mock_chain_registration_test.rs  name_registration_test.rs  naming_protocol_tests.rs  naming_referral_tests.rs  naming_register_tests.rs  naming_test.rs  naming_tests.rs  naming_transfer_tests.rs  owner_test.rs  payment_token_test.rs  price_update_test.rs  pricing_test.rs  register_test.rs  test_helper.rs  test_utils.rs  utils.rs
(+20 files in other folders)
